objects/Production_Estimate__c/Production_Estimate__c.object-meta.xml
<CustomObject>
    <description>This is Production Estimate object.</description>
    <label>Production Estimate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>