objects/Production_Estimate__c/fields/Commission_cost__c.field-meta.xml
<CustomField>
    <fullName>Commission_cost__c</fullName>
    <formula>Amount__c *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission $</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>