objects/Production_Estimate__c/fields/Cost1__c.field-meta.xml
<CustomField>
    <fullName>Cost1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>