objects/Production_Estimate__c/fields/Divide_Sheets_By_Two__c.field-meta.xml
<CustomField>
    <fullName>Divide_Sheets_By_Two__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Divide Sheets By Two</label>
    <type>Checkbox</type>
</CustomField>