objects/Production_Estimate__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Roland</fullName>
            </value>
            <value>
                <fullName>Xerox</fullName>
            </value>
            <value>
                <fullName>Binding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>