objects/Production_Estimate__c/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Department</label>
    <referenceTo>GL_Department__c</referenceTo>
    <relationshipLabel>Production Estimates</relationshipLabel>
    <relationshipName>Production_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>