objects/Production_Estimate__c/fields/Lf_Used__c.field-meta.xml
<CustomField>
    <fullName>Lf_Used__c</fullName>
    <formula>IF(ISPICKVAL( Calc_Unit__c , &quot;Size&quot;),

 (( CEILING((( Length_in_Inches__c  + 0.5)* 

  ( CEILING( Quantity__c  /  (Floor((Material_Item__r.Width_inches__c - 2) / 


( Width_in_Inches__c  + 0.5))))) / 12 )))+1), 

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lf Used</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>