objects/Production_Estimate__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Production Estimates</relationshipLabel>
    <relationshipName>Production_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>