objects/Production_Estimate__c/fields/Restrict__c.field-meta.xml
<CustomField>
    <fullName>Restrict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict</label>
    <type>Checkbox</type>
</CustomField>