objects/Production_Estimate__c/fields/SheetQtyUpforUsed__c.field-meta.xml
<CustomField>
    <fullName>SheetQtyUpforUsed__c</fullName>
    <label>SheetQtyUpforUsed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>