objects/Production_Estimate__c/fields/Shippment_status__c.field-meta.xml
<CustomField>
    <fullName>Shippment_status__c</fullName>
    <label>Shippment status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to be shipped</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>