objects/Production_Estimate__c/fields/Width_in_Inches__c.field-meta.xml
<CustomField>
    <fullName>Width_in_Inches__c</fullName>
    <label>Width in Inches</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>