objects/Production_Estimate__c/recordTypes/When_UnApproved.recordType-meta.xml
<RecordType>
    <fullName>When_UnApproved</fullName>
    <active>true</active>
    <label>When UnApproved</label>
</RecordType>