objects/Production_Estimate__c/validationRules/Restrict_Sheet_type_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Sheet_type_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Calc_Unit__c , &quot;Sheet&quot;),
   NOT( ISNULL(of_Pages__c) ), NOT( ISNULL(Qty_Up__c) ) )</errorConditionFormula>
    <errorDisplayField>of_Pages__c</errorDisplayField>
    <errorMessage>You can&apos;t  fill # of pages and  Qty Up field at a time</errorMessage>
</ValidationRule>